Bug 1501411 - Make sure that copying preference values from the new "about:config" page preserves whitespace. r=bgrins
Differential Revision: https://phabricator.services.mozilla.com/D16056

--- a/browser/components/aboutconfig/content/aboutconfig.css
+++ b/browser/components/aboutconfig/content/aboutconfig.css
@@ -69,6 +69,7 @@
 }
 
 .cell-value {
+  white-space: pre-wrap;
   word-break: break-all;
 }
 
